--- a/timit/train.yaml
+++ b/timit/train.yaml
@@ -190,3 +190,4 @@ ctc_stats: !name:speechbrain.utils.metric_stats.MetricStats
         reduction: batch
 
 per_stats: !name:speechbrain.utils.metric_stats.ErrorRateStats
+Modificación 1
