--- a/timit/.vscode/launch.json
+++ b/timit/.vscode/launch.json
@@ -11,6 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false,
+            "cwd": "${fileDirname}",
             "args": ["train.yaml"]
         }
     ]
