--- a/timit/train.yaml
+++ b/timit/train.yaml
@@ -15,7 +15,7 @@ train_log: !ref <output_folder>/train_log.txt
 # Data files
 data_folder: data # e.g. /path/to/TIMIT
 train_annotation: !ref <save_folder>/train.json
-valid_annotation: !ref <save_folder>/dev.jsonn
+valid_annotation: !ref <save_folder>/dev.json
 test_annotation: !ref <save_folder>/test.json
 skip_prep: False # Skip data preparation
 uppercase: False # Must be True when the TIMIT dataset is in the upper-case version
