--- a/timit/results/augment_noise_CRDNN/1986/hyperparams.yaml
+++ b/timit/results/augment_noise_CRDNN/1986/hyperparams.yaml
@@ -1,3 +1,6 @@
+# Generated 2025-06-28 from:
+# /home/cestien/trabajo/zero-res/zrc/tutorial_notebooks/pytorch/timit/train.yaml
+# yamllint disable
 # ################################
 # Model: CTC ASR on TIMIT with CRDNN (with LiGRU)
 # Additions: TimeDomainSpecAugment
@@ -6,24 +9,25 @@
 
 # Seed needs to be set at top of yaml, before objects with parameters are made
 seed: 1986
-__set_seed: !apply:speechbrain.utils.seed_everything [!ref <seed>]
-output_folder: !ref results/augment_noise_CRDNN/<seed>
-test_wer_file: !ref <output_folder>/wer_test.txt
+__set_seed: !apply:speechbrain.utils.seed_everything [1986]
+output_folder: results/augment_noise_CRDNN/1986
+test_wer_file: results/augment_noise_CRDNN/1986/wer_test.txt
 save_folder: data
-train_log: !ref <output_folder>/train_log.txt
+train_log: results/augment_noise_CRDNN/1986/train_log.txt
 
 # Data files
 data_folder: data # e.g. /path/to/TIMIT
-train_annotation: !ref <save_folder>/train.json
-valid_annotation: !ref <save_folder>/dev.json
-test_annotation: !ref <save_folder>/test.json
-skip_prep: False # Skip data preparation
-uppercase: False # Must be True when the TIMIT dataset is in the upper-case version
+train_annotation: data/train.json
+valid_annotation: data/dev.json
+test_annotation: data/test.json
+skip_prep: false # Skip data preparation
+uppercase: false # Must be True when the TIMIT dataset is in the upper-case version
 
 # Data for augmentation
-data_folder_noise: !ref <data_folder>/noise # The noisy sequences for data augmentation will automatically be downloaded here.
-NOISE_DATASET_URL: https://www.dropbox.com/scl/fi/a09pj97s5ifan81dqhi4n/noises.zip?rlkey=j8b0n9kdjdr32o1f06t0cw5b7&dl=1
-noise_annotation: !ref <save_folder>/noise.csv #The data manifest files are created by the data preparation script
+data_folder_noise: data/noise               # The noisy sequences for data augmentation will automatically be downloaded here.
+NOISE_DATASET_URL: 
+  https://www.dropbox.com/scl/fi/a09pj97s5ifan81dqhi4n/noises.zip?rlkey=j8b0n9kdjdr32o1f06t0cw5b7&dl=1
+noise_annotation: data/noise.csv               #The data manifest files are created by the data preparation script
 
 ####################### Training Parameters ####################################
 number_of_epochs: 50
@@ -37,14 +41,14 @@ n_fft: 400
 n_mels: 40
 
 ####################### Model Parameters #######################################
-activation: !name:torch.nn.LeakyReLU
+activation: &id001 !name:torch.nn.LeakyReLU
 dropout: 0.15
 cnn_blocks: 2
-cnn_channels: (128, 256)
-cnn_kernelsize: (3, 3)
+cnn_channels: &id002 (128, 256)
+cnn_kernelsize: &id003 (3, 3)
 rnn_layers: 4
 rnn_neurons: 512
-rnn_bidirectional: True
+rnn_bidirectional: true
 dnn_blocks: 2
 dnn_neurons: 512
 
@@ -55,19 +59,20 @@ blank_index: 0
 # Dataloader options
 num_workers: 4
 train_dataloader_opts:
-    batch_size: !ref <batch_size>
-    num_workers: !ref <num_workers>
+  batch_size: 8
+  num_workers: 4
 
 valid_dataloader_opts:
-    batch_size: !ref <batch_size>
-    num_workers: !ref <num_workers>
+  batch_size: 8
+  num_workers: 4
 
 test_dataloader_opts:
-    batch_size: !ref <batch_size>
-    num_workers: !ref <num_workers>
+  batch_size: 8
+  num_workers: 4
 
-normalize: !new:speechbrain.processing.features.InputNormalization
-    norm_type: global
+normalize: &id006 !new:speechbrain.processing.features.InputNormalization
+
+  norm_type: global
 
 
 # ############################## Augmentations ###################################
@@ -122,72 +127,71 @@ normalize: !new:speechbrain.processing.features.InputNormalization
 
 ############################## Models ##########################################
 
-epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
-    limit: !ref <number_of_epochs>
+epoch_counter: &id008 !new:speechbrain.utils.epoch_loop.EpochCounter
+
+  limit: 50
 
 compute_features: !new:speechbrain.lobes.features.Fbank
-    sample_rate: !ref <sample_rate>
-    n_fft: !ref <n_fft>
-    n_mels: !ref <n_mels>
+  sample_rate: 16000
+  n_fft: 400
+  n_mels: 40
 
-model: !new:speechbrain.lobes.models.CRDNN.CRDNN
-    input_size: !ref <n_mels>
-    activation: !ref <activation>
-    dropout: !ref <dropout>
-    cnn_blocks: !ref <cnn_blocks>
-    cnn_channels: !ref <cnn_channels>
-    cnn_kernelsize: !ref <cnn_kernelsize>
-    time_pooling: True
-    rnn_layers: !ref <rnn_layers>
-    rnn_neurons: !ref <rnn_neurons>
-    rnn_bidirectional: !ref <rnn_bidirectional>
-    dnn_blocks: !ref <dnn_blocks>
-    dnn_neurons: !ref <dnn_neurons>
+model: &id004 !new:speechbrain.lobes.models.CRDNN.CRDNN
+  input_size: 40
+  activation: *id001
+  dropout: 0.15
+  cnn_blocks: 2
+  cnn_channels: *id002
+  cnn_kernelsize: *id003
+  time_pooling: true
+  rnn_layers: 4
+  rnn_neurons: 512
+  rnn_bidirectional: true
+  dnn_blocks: 2
+  dnn_neurons: 512
 
-output: !new:speechbrain.nnet.linear.Linear
-    input_size: !ref <dnn_neurons>
-    n_neurons: !ref <output_neurons>
-    bias: True
+output: &id005 !new:speechbrain.nnet.linear.Linear
+  input_size: 512
+  n_neurons: 40
+  bias: true
 
 log_softmax: !new:speechbrain.nnet.activations.Softmax
-    apply_log: True
+  apply_log: true
 
 opt_class: !name:torch.optim.Adadelta
-    rho: 0.95
-    lr: !ref <lr>
-    eps: 1.e-8
+  rho: 0.95
+  lr: 1.0
+  eps: 1.e-8
 
-lr_annealing: !new:speechbrain.nnet.schedulers.NewBobScheduler
-    initial_value: !ref <lr>
-    improvement_threshold: 0.0025
-    annealing_factor: 0.8
-    patient: 0
+lr_annealing: &id007 !new:speechbrain.nnet.schedulers.NewBobScheduler
+  initial_value: 1.0
+  improvement_threshold: 0.0025
+  annealing_factor: 0.8
+  patient: 0
 
 modules:
-    model: !ref <model>
-    output: !ref <output>
-    normalize: !ref <normalize>
-
+  model: *id004
+  output: *id005
+  normalize: *id006
 jit_module_keys: [model]
 
 checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
-    checkpoints_dir: !ref <save_folder>
-    recoverables:
-        model: !ref <model>
-        output: !ref <output>
-        scheduler: !ref <lr_annealing>
-        normalizer: !ref <normalize>
-        counter: !ref <epoch_counter>
-
+  checkpoints_dir: data
+  recoverables:
+    model: *id004
+    output: *id005
+    scheduler: *id007
+    normalizer: *id006
+    counter: *id008
 compute_cost: !name:speechbrain.nnet.losses.ctc_loss
-    blank_index: !ref <blank_index>
+  blank_index: 0
 
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
-    save_file: !ref <train_log>
+  save_file: results/augment_noise_CRDNN/1986/train_log.txt
 
 ctc_stats: !name:speechbrain.utils.metric_stats.MetricStats
-    metric: !name:speechbrain.nnet.losses.ctc_loss
-        blank_index: !ref <blank_index>
-        reduction: batch
+  metric: !name:speechbrain.nnet.losses.ctc_loss
+    blank_index: 0
+    reduction: batch
 
 per_stats: !name:speechbrain.utils.metric_stats.ErrorRateStats
